got rid of download endpoint, now all files are statically served
