# internal/domain/resource/model/resource.go
@@ -25,6 +25,8 @@ type ResourceResponse struct {
 	// State of resource, can be either PUBLIC or PRIVATE
 	// example: PUBLIC
 	State string `json:"state"`
+	// Path to the resource Image
+	PictureUrl string `json:"pictureUrl,omitempty"`
 	// CategoryId ID of the category that the resource is a part of
 	// example: 1
 	CategoryId *int `json:"categoryId,omitempty"`
@@ -90,6 +92,9 @@ type UpdateResource struct {
 	// Id of the category that the resource is a part of
 	// example: 1
 	CategoryId *int `json:"categoryId"`
+	// Name of the category that will be created for resource
+	// example: back-end
+	CategoryName *string `json:"categoryName"`
 	// State of resource, can be either PUBLIC or PRIVATE
 	// example: PUBLIC
 	State *string `json:"state"`
